# PythonRepo

github-ready-python-repositories/: OPEN_ME_FIRST.md  PUBLISHING.md
github-ready-python-repositories/receipt-radar/: README.md  pyproject.toml
github-ready-python-repositories/receipt-radar/examples/: transactions.csv
github-ready-python-repositories/receipt-radar/src/receipt_radar/: __init__.py  analysis.py  cli.py
github-ready-python-repositories/receipt-radar/tests/: test_analysis.py
github-ready-python-repositories/signal-scout/: README.md  pyproject.toml
github-ready-python-repositories/signal-scout/examples/: customers.csv
github-ready-python-repositories/signal-scout/src/signal_scout/: __init__.py  cli.py  profiler.py  report.py
github-ready-python-repositories/signal-scout/tests/: test_profiler.py
github-ready-python-repositories/workflow-weaver/: LICENSE  README.md  pyproject.toml
github-ready-python-repositories/workflow-weaver/examples/: build_pipeline.py
github-ready-python-repositories/workflow-weaver/src/workflow_weaver/: __init__.py  runner.py
github-ready-python-repositories/workflow-weaver/tests/: test_runner.py
