[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-radar"
version = "0.1.0"
description = "Private, rule-based expense categorization and anomaly detection."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BhuvaneshN09" }]
license = { text = "MIT" }
keywords = ["finance", "csv", "cli", "expense-tracking"]

[project.scripts]
receipt-radar = "receipt_radar.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
