[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-scout"
version = "0.1.0"
description = "Zero-dependency CSV profiler for data quality reports."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BhuvaneshN09" }]
license = { text = "MIT" }
keywords = ["csv", "data-quality", "profiling", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
signal-scout = "signal_scout.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
