[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-weaver"
version = "0.1.0"
description = "Tiny dependency-aware workflow runner with retries."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BhuvaneshN09" }]
license = { text = "MIT" }
keywords = ["workflow", "dag", "automation", "tasks"]

[tool.pytest.ini_options]
pythonpath = ["src"]
